traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:24: error: ';' expected but 'else' found.
      else if(y == hauteur)
      ^